cluster2/elastic-cluster2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster1
  labels:
    name: cluster1
